# windows_auto_backup

./: .gitignore  Cargo.toml  README.md  app.manifest.rc  app.manifest.xml  build.rs  config copy.toml
NSudo/: Install.cmd  xiuxitong.cmd
src/: main.rs
src/lib/: config.rs  logs.rs  macros.rs  smb.rs  snapshot.rs
